@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.16 2004/12/20 08:41:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.17 2004/12/20 22:27:11 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Partition screen "complete" with idiot-proofed goodness! Minor modification
-  for info display when creating logical partition.
+  for info display when creating logical partition. Slider color changes to
+  match selected filesystem when creating new partition.
 
   19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Exit button works. Load button works. Save button works. Minor fixes to
